api: snapshot docs and test